--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,7 +20,7 @@
 <body>
 <div class="row main-container">
     <!-- left container -->
-    <div id="left-container" class="col s12 m6 fadeInLeft">
+    <div id="left-container" class="col l6 s12 m6 fadeInLeft">
         <div class="inner-text valign-wrapper">
             <div class="center-align text-wrapper">
                 <title>Hello from Flask</title>
