Fix create file bug and make modal container

--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -26,7 +26,7 @@
                 <title>Hello from Flask</title>
                 <img src="/static/assets/Tim.png" id="picture" class="circle"/>
                 {% if name %}
-                    <p id="name">Hello {{ name }}!</p>
+                <p id="name">Hello {{ name }}!</p>
                 {% endif %}
                 </br>
                 <p class="desc">Welcome to <span> MESA</span></p>
@@ -96,7 +96,7 @@
         <h4 style="margin-top: 30px;" class="row">Track List</h4>
         <div id="playtrack-container" class="row">-</div>
 
-        <div class="modal fade" id="myModal" role="dialog"
+        <div class="modal fade container" id="myModal" role="dialog"
              style="background: transparent;border: none; box-shadow: none;">
             <div class="modal-dialog">
                 <!-- Modal content-->
