--- a/templates/profile.html
+++ b/templates/profile.html
@@ -67,7 +67,7 @@
             <div class="col l3 m12 s12 title left-align"><span>EMOTIONS</span></div>
             <div class="col l9 m12 s12 desc left-align emotions">
 
-                <form action="profile.html/search_emotions" method="get">
+                <form action="/search_emotions" method="get">
                     <p><span>Pick a genre of song: (Scroll for more options)</span></p>
 
                     <div class="genre-selector">
