--- a/templates/hello.html
+++ b/templates/hello.html
@@ -20,7 +20,7 @@
 
 <body class="app" id="maincontainer">
 <nav class="navbar navbar-expand-lg p-3 navbar-dark">
-    <a class="navbar-brand" id="title" href="#"><strong>Musify</strong></a>
+    <a class="navbar-brand" id="title" href="#"><strong>MESA</strong></a>
     <button
             class="navbar-toggler"
             type="button"
@@ -34,14 +34,14 @@
     </button>
 </nav>
 
-<div class="container">
-    <div class="row mt-5">
+<div class="container-fluid">
+    <div class="row mt-5" style="padding-left: 5%; padding-right: 5%;">
         <div class="col-xs-12 col-lg-6 text-white mt-5">
             <div class="col contactive section-container" id="section-container1">
                 <h1 class="mt-5">
                     <strong>
                         What is
-                        <span id="title">Musify?</span>
+                        <span id="title">MESA?</span>
                     </strong>
                 </h1>
                 <p class="glass-card">
@@ -99,7 +99,7 @@
                 Login with Spotify
             </button>
         </div>
-        <div class="col-xs-12 col-lg-6 mt-5 ml-5" style="padding-left: 10%">
+        <div class="col-xs-12 col-lg-6 mt-5 ml-5" style="text-align: center">
             <img
                     src="https://i.postimg.cc/90CkH450/spaceman6-removebg-preview.png"
                     class="mt-5 ml-5"
