Improve mobile landing page and add sign up page

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -95,7 +95,7 @@
             <button type="button" onclick="toggleSection('section-container2')" class="btn btn-md mt-4 btn-bg">
                 Why?
             </button>
-            <button type="button" onclick="toggleSection('section-container3')" class="btn btn-md mt-4 btn-bg">
+            <button type="button" onclick="window.location='/auth/login'" class="btn btn-md mt-4 btn-bg">
                 Login with Spotify
             </button>
         </div>
